# git-hours

./: Makefile  README.md  main.py  pyproject.toml
src/git_hours/: main.py
tests/: test_functional.py
